--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,24 +18,24 @@ android {
         }
     }
 }
-
+repositories {
+    maven { url "https://jitpack.io" }
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-messaging:11.0.2'
     compile 'com.google.firebase:firebase-core:11.0.2'
-    testCompile 'junit:junit:4.12'
-
-    // Retrofit 2 to make Http Request
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
-
-    // Gson converter for Retrofit 2
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    testCompile 'junit:junit:4.12'
 }
 
 
