--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".controller.MainActivity"
+            android:name=".controller.activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -26,6 +26,10 @@
             </intent-filter>
         </service>
 
+        <activity android:name=".controller.activities.TemperatureActivity" />
+        <activity android:name=".controller.activities.HygrometerActivity" />
+        <activity android:name=".controller.activities.LuminosityActivity" />
+        <activity android:name=".controller.activities.HumidityActivity"></activity>
     </application>
 
 </manifest>
