Change Value Formatter, and style for MainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service
-            android:name=".fcm.FCMGreenhouseService">
+
+        <service android:name=".fcm.FCMGreenhouseService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
@@ -35,7 +35,7 @@
         <activity android:name=".controller.activities.TemperatureActivity" />
         <activity android:name=".controller.activities.HygrometerActivity" />
         <activity android:name=".controller.activities.LuminosityActivity" />
-        <activity android:name=".controller.activities.HumidityActivity"></activity>
+        <activity android:name=".controller.activities.HumidityActivity" />
     </application>
 
 </manifest>
