--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,24 @@
-# Project-wide Gradle settings.
-
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
+## Project-wide Gradle settings.
+#
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
-
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+#Tue Jul 11 16:33:47 CEST 2017
+systemProp.http.proxyPort=8080
+systemProp.http.proxyUser=pxnm977
+systemProp.http.proxyPassword=u3K\=t9Q)
+org.gradle.jvmargs=-Xmx1536m
+systemProp.https.proxyPassword=u3K\=t9Q)
+systemProp.https.proxyHost=web.pandore.log.intra.laposte.fr
+systemProp.http.proxyHost=web.pandore.log.intra.laposte.fr
+systemProp.https.proxyPort=8080
+systemProp.https.proxyUser=pxnm977
